tests/errors/syn_method10.java
public class syn_method10 {
public static String[] ( ) {
 
}
}